fix: extra horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   font-family: 'Lexend', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -25,8 +24,9 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  /* ! Cause of extra unecessary horizontal scrollbar */
   min-height: 100vh;
-  min-width: 100vw;
+  /* min-width: 100vw;  */
   font-family: 'Lexend', sans-serif;
 }
 
